force-app/main/default/objects/Sensitive_Data_Field__c/fields/securityClassification__c.field-meta.xml
<CustomField>
    <fullName>securityClassification__c</fullName>
    <label>securityClassification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>MissionCritical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>