force-app/main/default/objects/Sensitive_Data_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sensitive_Data_ObjectId__c</columns>
    <columns>securityClassification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>